@@ -7,6 +7,8 @@ Version 1.8.7
        converted to a relative url. (Stefan)
 - BUG: Issue #636: externals property dialog does not
        handle multiple selections. (Stefan)
+- BUG: Issue #637: TortoiseMerge fails to detect
+       utf16 files if BOM is missing. (Stefan)
 
 Version 1.8.6
 - BUG: Issue #617: Checkbox size too big on Aero
